--- a/src/components/paginas/StylesNew.css
+++ b/src/components/paginas/StylesNew.css
@@ -104,7 +104,17 @@
     transition: background-color 0.3s;
   }
 
-  .btn_agendarhora:hover{
+  .btn2{
+    background-color: #641c34;
+    color: #fff;
+    font-size: 1.5rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.25rem;
+    transition: background-color 0.3s;
+  }
+
+  .btn2:hover{
     background-color: #212529;
   }
 
@@ -316,6 +326,7 @@
   body {
     display: inline-block;
     width: 100%;
+    height: 100%;
   }
   
   .titulo-1{
