--- a/src/components/paginas/signup.css
+++ b/src/components/paginas/signup.css
@@ -17,9 +17,13 @@ body{
     color: #c4c3ca;
     background-color: #E6F5F5 !important;
     overflow-x: hidden;
-    
+
 }
 
+
+#navbar_admin{
+    background-color: #191919 !important;
+}
 
 
 label.error{
@@ -127,6 +131,28 @@ h6 span{
     border:1px solid rgba(0, 0, 0, 0.12);
     box-shadow:rgba(0, 0, 0, 0.22) 0px 2px 6px;
     background-color: #fff;
+    background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
+    background-position: bottom center;
+    background-repeat: no-repeat;
+    background-size: 300%;
+    position: absolute;
+    border-radius: 6px;
+    left: 0;
+    top: 0;
+    -webkit-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+#card-front-admin {
+    width: 100%;
+    height: 120%;
+    border:6px solid black;
+    box-shadow:rgba(0, 0, 0, 0.22) 0px 2px 6px;
+    background-color: black;
     background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/1462889/pat.svg');
     background-position: bottom center;
     background-repeat: no-repeat;
